fix record list scaling issues on smaller screens

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -10,6 +10,10 @@
 .nr
   background-color: $background
 
+  .collection-item
+    border-top: 1px solid $secondary
+    min-height: 100px
+
   .q-dialog
     z-index: 9000
 
